--- a/coursework2/block09/careerSimulation/aboutMe.html
+++ b/coursework2/block09/careerSimulation/aboutMe.html
@@ -12,16 +12,40 @@
 <body>
     <a class="navbar" href="home.html">Home</a>
     <a class="navbar" href="porfolio.html">Portfolio</a>
+    <table>
+        <th>
+            <h2>Improvisor</h2>
+        </th>
+        <tr class="center">
+            <td><img class="improv" src="images/improv.jpg" alt="Gem">
+                <p>I perform improvisational comedy and musical improv at The Magnet Theater in NYC with teams GEM and
+                    Lost. I teach improv comedy at FoHi improv in Queens, NY.</p>
+            </td>
+        </tr>
+        <th>
+            <h2>Performer</h2>
+        </th>
+        <tr class="center">
+            <td>
+                <img class="performer" src="images/shrek.jpg" alt="Pinocchio">
+                <p>Here I am performing in a community version of Shrek: The Musical.
+                </p>
+            </td>
 
-    <div class="card">
-        <h2>Improvisor</h2>
-        <img src="images/improv.jpg" alt="Gem">
-        <br>
-        <h2>Performer</h2>
-        <img src="images/shrek.jpg" alt="Pinocchio">
-        <h2>Nerd</h2>
-        <img src="images/nerd.jpg" alt="One Piece">
-    </div>
+        </tr>
+
+        <th>
+            <h2>Nerd</h2>
+        </th>
+        <tr class="center">
+            <td>
+
+                <img class="improv" src="images/nerd.jpg" alt="One Piece">
+                <p>I feel like this one is self explainitory.</p>
+            </td>
+
+        </tr>
+    </table>
 
     <footer>
     
@@ -36,6 +60,7 @@
         <a class="social" href="https://www.linkedin.com/in/gordontracey/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
 
     </footer>
+
 </body>
 
 </html>
