--- a/coursework2/block09/careerSimulation/porfolio.html
+++ b/coursework2/block09/careerSimulation/porfolio.html
@@ -12,28 +12,42 @@
 <body>
     <a class="navbar" href="home.html">Home</a>
     <a class="navbar" href="aboutMe.html">About Me</a>
-    <div class="card">
-        <h2>Project One</h2>
-        <img src="images/project1.png">
-        <br>
-        <h2>Project Two</h2>
-        <img src="images/project2.png">
-        <br>
-        <h2>Project Three</h2>
-        <img src="images/project3.png">
-    </div>
+    <table>
+        <th>
+            <h2>Project One</h2>
+        </th>
+       <tr class="center"><td> <img class="improv" src="images/project1.png"> 
+    <p>The link works but it <b>will</b> take you to the Wikipedia page for crocodiles.</p>
+    </td></tr> 
 
+        <th>
+            <h2>Project Two</h2>
+        </th>
+       <tr class="center"> <td> <img class="performer" src="images/project2.png">
+    <p>A not entirely inaccurate grocery list for me.</p>
+    </td></tr>
+
+        <th>
+            <h2>Project Three</h2>
+        </th>
+        <tr class="center"><td><img class="improv" src="images/project3.png">
+        <p>Now with funtioning alert buttons!</p>
+        </td></tr>
+
+    </table>
     <footer>
 
         <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
-        
-        <a class="social" href="https://www.instagram.com/traceyagordon/" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
+
+        <a class="social" href="https://www.instagram.com/traceyagordon/" target="_blank"><ion-icon
+                name="logo-instagram"></ion-icon></a>
 
 
 
-        <a class="social" href="https://www.linkedin.com/in/gordontracey/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
+        <a class="social" href="https://www.linkedin.com/in/gordontracey/" target="_blank"><ion-icon
+                name="logo-linkedin"></ion-icon></a>
 
     </footer>
 </body>
