--- a/coursework2/block09/careerSimulation/aboutMe.html
+++ b/coursework2/block09/careerSimulation/aboutMe.html
@@ -28,7 +28,11 @@
         <tr class="center">
             <td>
                 <img class="performer" src="images/shrek.jpg" alt="Pinocchio">
-                <p>Here I am performing in a community version of Shrek: The Musical.
+                <p>Here I am in a community production of Shrek: The Musical as Pinocchio. I have experience in performing as an
+                    entertainer as well as giving business presentations*.
+                    <br>
+                    <br>
+                    *Business presentations typically do not include the Pinocchio nose..
                 </p>
             </td>
 
@@ -41,7 +45,7 @@
             <td>
 
                 <img class="improv" src="images/nerd.jpg" alt="One Piece">
-                <p>I feel like this one is self explainitory.</p>
+                <p>This one feels self explainitory.</p>
             </td>
 
         </tr>
