--- a/coursework2/block09/careerSimulation/porfolio.html
+++ b/coursework2/block09/careerSimulation/porfolio.html
@@ -16,23 +16,29 @@
         <th>
             <h2>Project One</h2>
         </th>
-       <tr class="center"><td> <img class="improv" src="images/project1.png"> 
-    <p>The link works but it <b>will</b> take you to the Wikipedia page for crocodiles.</p>
-    </td></tr> 
+        <tr class="center">
+            <td> <img class="improv" src="images/project1.png">
+                <p>The link works but it <b>will</b> take you to the Wikipedia page for crocodiles.</p>
+            </td>
+        </tr>
 
         <th>
             <h2>Project Two</h2>
         </th>
-       <tr class="center"> <td> <img class="performer" src="images/project2.png">
-    <p>A not entirely inaccurate grocery list for me.</p>
-    </td></tr>
+        <tr class="center">
+            <td> <img class="performer" src="images/project2.png">
+                <p>A not entirely inaccurate grocery list for me.</p>
+            </td>
+        </tr>
 
         <th>
             <h2>Project Three</h2>
         </th>
-        <tr class="center"><td><img class="improv" src="images/project3.png">
-        <p>Now with funtioning alert buttons!</p>
-        </td></tr>
+        <tr class="center">
+            <td><img class="improv" src="images/project3.png">
+                <p>Now with functioning alert buttons!</p>
+            </td>
+        </tr>
 
     </table>
     <footer>
