--- a/coursework2/block10/workshop/code/Picasso.html
+++ b/coursework2/block10/workshop/code/Picasso.html
@@ -10,14 +10,14 @@
 
 <body>
 
-    <a class="navbar" href="Picasso.html">HOME</a>
-    <a class="navbar" href="formsubmitted.html">PURCHASE</a>
+    <a class="navbar" href="Picasso.html">HOME🏠</a>
+    <a class="navbar" href="formsubmitted.html">PURCHASE🖼️</a>
 
-    <div class="art">
-        <img src="art5.jpg" alt="art5">
-        <img src="art6.jpg" alt="art6">
-        <img src="art7.jpg" alt="art7">
-        <img src="art8.jpg" alt="art8">
+    <div class="artcontainer">
+        <img class="art5"src="art5.jpg" alt="art5">
+        <img class="art6"src="art6.jpg" alt="art6">
+        <img class="art7"src="art7.jpg" alt="art7">
+        <img class="art8"src="art8.jpg" alt="art8">
     </div>
 </body>
 
