--- a/coursework2/block10/workshop/code/formsubmitted.html
+++ b/coursework2/block10/workshop/code/formsubmitted.html
@@ -10,23 +10,24 @@
 
 <body>
 
-    <a class="navbar" href="Picasso.html">HOME</a>
-    <a class="navbar" href="formsubmitted.html">PURCHASE</a>
+    <a class="navbar" href="Picasso.html">HOME🏠</a>
+    <a class="navbar" href="formsubmitted.html">PURCHASE🖼️</a>
 
-        <h2>Thank you for supporting 🌈the arts🌈!</h2>
-        <h3>You are superior to your sports-watching friends!</h3>
+    <h2>Thank you for supporting 🌈the arts🌈!</h2>
+    <h3>You are superior to your sports-watching friends!</h3>
+    <p><b> Please enter your information below if you are interested in purchasing a digital copy:</b>
+    </p>
+    <form>
+        <label class="name" for="Name">Name:</label>
+        <input class="name" type="text" />
 
-        <p><b> Please enter your information below if you are interested in purchasing a digital copy:</b>
-        </p>
-        <form>
-            <label for="Name">Name:</label>
-            <input type="text" />
+        <label class="email" for="E-Mail">E-Mail Address:</label>
+        <input class="email" type="text" />
 
-            <label for="E-Mail">E-Mail Address:</label>
-            <input type="text" />
-
-        </form>
-
+        <input class="submit" type="submit" value="Submit">
+    </form>
+<!-- <br>
+    <img class="myart" src="myart.png" alt="The Art"> -->
 
 </body>
 
