--- a/coursework2/block10/workshop/code/Picasso.html
+++ b/coursework2/block10/workshop/code/Picasso.html
@@ -13,6 +13,9 @@
     <a class="navbar" href="Picasso.html">HOME🏠</a>
     <a class="navbar" href="formsubmitted.html">PURCHASE🖼️</a>
 
+    <h2>Welcome to VIA, a Virtual Interaction for <br> 🌈The Arts🌈</h2>
+    <h3>(a.k.a. Charlotte York, eat your heart out)</h3>
+
     <div class="artcontainer">
         <img class="art5"src="art5.jpg" alt="art5">
         <img class="art6"src="art6.jpg" alt="art6">
