--- a/coursework2/block10/workshop/code/formsubmitted.html
+++ b/coursework2/block10/workshop/code/formsubmitted.html
@@ -13,11 +13,11 @@
     <a class="navbar" href="Picasso.html">HOME🏠</a>
     <a class="navbar" href="formsubmitted.html">PURCHASE🖼️</a>
 
-    <h2>Thank you for supporting 🌈the arts🌈!</h2>
+    <h2>Thank you for supporting <br>🌈The Arts🌈!</h2>
     <h3>You are superior to your sports-watching friends!</h3>
     <p><b> Please enter your information below if you are interested in purchasing a digital copy:</b>
     </p>
-    <form>
+    <form action="thankyou.html">
         <label class="name" for="Name">Name:</label>
         <input class="name" type="text" />
 
@@ -25,6 +25,7 @@
         <input class="email" type="text" />
 
         <input class="submit" type="submit" value="Submit">
+
     </form>
 <!-- <br>
     <img class="myart" src="myart.png" alt="The Art"> -->
