--- a/coursework2/block09/careerSimulation/aboutMe.html
+++ b/coursework2/block09/careerSimulation/aboutMe.html
@@ -32,7 +32,7 @@
                     entertainer as well as giving business presentations*.
                     <br>
                     <br>
-                    *Business presentations typically do not include the Pinocchio nose..
+                    *Business presentations typically do not include the Pinocchio nose.
                 </p>
             </td>
 
