--- a/coursework2/block09/careerSimulation/home.html
+++ b/coursework2/block09/careerSimulation/home.html
@@ -12,6 +12,7 @@
 <body>
     <a class="navbar" href="aboutMe.html">About Me</a>
     <a class="navbar" href="porfolio.html">Portfolio</a>
+    <a class="navbar" href="Contact.html">Contact</a>
 
     <header class="border">
             <h1>Tracey Gordon</h1>
