--- a/coursework2/block09/careerSimulation/aboutMe.html
+++ b/coursework2/block09/careerSimulation/aboutMe.html
@@ -12,6 +12,7 @@
 <body>
     <a class="navbar" href="home.html">Home</a>
     <a class="navbar" href="porfolio.html">Portfolio</a>
+    <a class="navbar" href="Contact.html">Contact</a>
     <table>
         <th>
             <h2>Improvisor</h2>
