--- a/coursework2/block09/careerSimulation/porfolio.html
+++ b/coursework2/block09/careerSimulation/porfolio.html
@@ -12,6 +12,7 @@
 <body>
     <a class="navbar" href="home.html">Home</a>
     <a class="navbar" href="aboutMe.html">About Me</a>
+    <a class="navbar" href="Contact.html">Contact</a>
     <table>
         <th>
             <h2>Project One</h2>
