--- a/coursework2/block09/careerSimulation/contact.html
+++ b/coursework2/block09/careerSimulation/contact.html
@@ -19,10 +19,16 @@
 
     <form action="success.html">
         <label class="name" for="Name"></label>
-        <input class="name" type="text" placeholder="Name"/>
+        <input class="name" type="text" placeholder="Name*"required/>
+        <br>
 
-        <label class="email" for="E-Mail"></label>
-        <input class="email" type="text" placeholder="E-Mail"/>
+        <label class="email" for="Email"></label>
+        <input class="email" type="text" placeholder="Email*" required/>
+        <br>
+
+        <textarea name="textarea" rows="8" id="textarea" placeholder="Message"></textarea>
+        <br><br>
+    
 
         <input class="submit" type="submit" value="Submit">
 
