--- a/coursework2/block09/careerSimulation/contact.html
+++ b/coursework2/block09/careerSimulation/contact.html
@@ -17,7 +17,9 @@
 
     <h2>Contact Me <br>(me being Tracey and not Not Tracey)</h2>
 
-    <form action="success.html">
+    <form action="mailto:traceyagordon@gmail.com" method="post">
+    <!--action="success.html"-->
+        
         <label class="name" for="Name"></label>
         <input class="name" type="text" placeholder="Name*"required/>
         <br>
