changed form action

--- a/coursework2/block09/careerSimulation/contact.html
+++ b/coursework2/block09/careerSimulation/contact.html
@@ -17,8 +17,8 @@
 
     <h2>Contact Me <br>(me being Tracey and not Not Tracey)</h2>
 
-    <form action="mailto:traceyagordon@gmail.com" method="post">
-    <!--action="success.html"-->
+    <form action="success.html">
+    <!--action="mailto:traceyagordon@gmail.com" method="post"-->
         
         <label class="name" for="Name"></label>
         <input class="name" type="text" placeholder="Name*"required/>
