--- a/coursework2/block10/Guided Practice/home.html
+++ b/coursework2/block10/Guided Practice/home.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <h1>Form Follows Function</h1>
     <section>
         <heading>Hello World</heading>
     </section>
@@ -16,7 +17,7 @@
     <form>
         <label for="text">Type here:</label>
         <input type="text" value="Text" />
-
+    </form>
 
         <ol>
             <li>cookie</li>
@@ -36,7 +37,6 @@
         <input type="submit" value="Submit">
 
         <!--background-color:rgb(170, 9, 149)!important-->
-    </form>
 </body>
 
 </html>
