--- a/warm-ups/student-picker/index.html
+++ b/warm-ups/student-picker/index.html
@@ -1,21 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Student Picker</title>
     <script src="script.js" defer></script>
-    <style>
-        .student{
-            padding: 8px;
-            font-size: xx-large;
-            text-align: center;
-        };
-    </style>
-</head>
-<body>
-    <h1>Student Lottery Winner</h1>
-    <button id="picker">Choose One</button>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body style="background-color: black;">
+    <h1 style="text-align: center; color: aliceblue;">Student Lottery Winner</h1>
     <div class="student" id="student"></div>
-</body>
+    <div class="wheel-cover">
+      <fieldset class="ui-wheel-of-fortune">
+        <ul id="student-list">
+          <li>Shafi</li>
+          <li>Erina</li>
+          <li>Jenna</li>
+          <li>Denver</li>
+          <li>Victoria</li>
+          <li>Janaya</li>
+          <li>Honor</li>
+          <li>Rashena</li>
+          <li>Kendall</li>
+          <li>Grace</li>
+          <li>Mina</li>
+          <li>Morgan</li>
+          <li>Kseniia</li>
+          <li>Shazeeda</li>
+          <li>Kat</li>
+          <li>Denise</li>
+          <li>Djana</li>
+          <li>Michelle</li>
+          <li>Tejah</li>
+          <li>Laigha</li>
+        </ul>
+        <button type="button">SPIN</button>
+      </fieldset>
+    </div>
+  </body>
 </html>
