--- a/warm-ups/student-picker/index.html
+++ b/warm-ups/student-picker/index.html
@@ -33,6 +33,7 @@
           <li>Michelle</li>
           <li>Tejah</li>
           <li>Laigha</li>
+          <li>Tracey</li>
         </ul>
         <button type="button">SPIN</button>
       </fieldset>
