--- a/warm-ups/block24/index.html
+++ b/warm-ups/block24/index.html
@@ -12,7 +12,7 @@
     <span style='font-size:100px;'>&#128008;</span>
     <section id="cat-fact-container">
     <!-- Add a <button> element via the DOM that when clicked, retrieves a random cat fact -->
-    <!-- Add a <button> element that when clicked, retrieves a random cat fact  -->
+    <!-- Add a p element to display the cat fact -->
     </section>
     <section id="cat-breeds-container">
     <!-- For each breed returned from the API, display the Breed, country, coat and pattern in a div -->
