--- a/warm-ups/block24/index.html
+++ b/warm-ups/block24/index.html
@@ -14,6 +14,7 @@
     <!-- Add a <button> element via the DOM that when clicked, retrieves a random cat fact -->
     <!-- Add a p element to display the cat fact -->
     </section>
+    <h2>Breeds</h2>
     <section id="cat-breeds-container">
     <!-- For each breed returned from the API, display the Breed, country, coat and pattern in a div -->
     </section>
